k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iit-website
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: production
