k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iit-website
  namespace: iit-website
  labels:
    app: iit-website
    app.kubernetes.io/name: iit-website
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: iit-website
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
